--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./common.scss";
+// @import "./common.scss";
 @import "./reset.scss";
 @import 'element-plus/dist/index.css';
 @import "./transition.scss";
